<resources>
    <string name="app_name">Education App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="video">Video</string>

    <!-- name of buttons -->
    <string name="watch_video">Watch Video</string>
    <!-- content description -->
    <string name="java">Java</string>
    <string name="python">Python</string>
    <string name="android">Android</string>


</resources>